--- a/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
+++ b/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
@@ -108,7 +108,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies />
+      <AdditionalDependencies>opencv_world340d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
