--- a/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
+++ b/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
@@ -148,11 +148,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="face.hpp" />
+    <ClInclude Include="src\face_alignmentimpl.hpp" />
+    <ClInclude Include="src\face_utils.hpp" />
+    <ClInclude Include="src\precomp.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FaceRecognition_ByOpenCV.cpp" />
+    <ClCompile Include="src\eigen_faces.cpp" />
+    <ClCompile Include="src\facemark.cpp" />
+    <ClCompile Include="src\facemarkAAM.cpp" />
+    <ClCompile Include="src\facemarkLBF.cpp" />
+    <ClCompile Include="src\facerec.cpp" />
+    <ClCompile Include="src\face_alignment.cpp" />
+    <ClCompile Include="src\face_basic.cpp" />
+    <ClCompile Include="src\fisher_faces.cpp" />
+    <ClCompile Include="src\getlandmarks.cpp" />
+    <ClCompile Include="src\lbph_faces.cpp" />
+    <ClCompile Include="src\mace.cpp" />
+    <ClCompile Include="src\predict_collector.cpp" />
+    <ClCompile Include="src\regtree.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
