--- a/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
+++ b/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
@@ -75,6 +75,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>E:\opencv\opencv\build\install\include\opencv;E:\opencv\opencv\build\install\include\opencv2;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\opencv\opencv\build\install\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -108,7 +110,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_world340d.lib;opencv_face340d.lib</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world340d.lib;opencv_face340d.lib;opencv_face340.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
