--- a/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
+++ b/FaceRecognition_ByOpenCV/FaceRecognition_ByOpenCV.vcxproj
@@ -110,7 +110,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_world340d.lib;opencv_face340d.lib</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world340d.lib;opencv_face340d.lib;opencv_face340.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
